<resources>
    <string name="app_name">Calculation skills Up</string>
    <!--activity_result-->
    <string name="resultTitle">This Time Result</string>
    <string name="item1">No</string>
    <string name="item2">judge</string>
    <string name="item3">question/answer</string>
    <string name="item4">input</string>
    <!--activity_all_result-->
    <string name="item5">question</string>
    <string name="item6">answer</string>
    <string name="item7">date</string>
    <string name="item8">time</string>
    <string name="btn1">finish</string>
    <string name="allResultTitle">Past Result</string>
    <!--activity_main-->
    <string name="addition">ADDITION(+)</string>
    <string name="subtraction">SUBTRACTION(-)</string>
    <string name="multiplication">MULTIPLICATION(×)</string>
    <string name="division">DIVISION(÷)</string>
    <string name="level1">Level1</string>
    <string name="level2">Level2</string>
    <string name="level3">Level3</string>
    <string name="level4">Level4</string>
    <string name="level5">Level5</string>
    <string name="level6">Level6</string>
    <string name="level7">Level7</string>
    <string name="level8">Level8</string>
    <string name="level9">Level9</string>
    <string name="level10">Level10</string>
    <string name="start">Start</string>
    <string name="PastResultStart">PastResult</string>
    <string name="custom">Custom</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="privacyPolicy">PrivacyPolicy</string>
    <!--activity_calcpage-->
    <string name="remainder">Remainder</string>
    <string name="returnToTop">TOP</string>
    <string name="judge">Judge</string>
    <string name="backSpace">BackSpace</string>
    <string name="delete">Delete</string>
    <string name="tapNext">Tap To Next</string>
</resources>