<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addition"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />
    <TextView
        android:id="@+id/textSubtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/subtraction"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:layout_editor_absoluteX="115dp" />


    <TextView
        android:id="@+id/textSubtraction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/custom"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddition">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddition1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level1"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level2"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level3"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level4"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level5"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAddition6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level6"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level7"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level8"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAddition9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAddition10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level10"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtraction">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSubtraction1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level1"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level2"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level3"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level4"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level5"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSubtraction6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level6"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level7"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level8"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level9"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnSubtraction10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#A37DFD"
                android:text="@string/level10"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/buAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#A37DFD"
            android:text="@string/addition" />
        <Button
            android:id="@+id/buSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#A37DFD"
            android:text="@string/subtraction" />
        <Button
            android:id="@+id/buMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#A37DFD"
            android:text="@string/multiplication" />
        <Button
            android:id="@+id/buDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#A37DFD"
            android:text="@string/division" />
        <Spinner
            android:id="@+id/leftSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
        <Spinner
            android:id="@+id/rightSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/buStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#95A3FF"
            android:text="@string/start"
            android:textSize="24sp" />
    </LinearLayout>


    <Button
        android:id="@+id/buTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#95A3FF"
        android:text="テスト"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="#7471DA"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>